Admin user endpoints (#77)
* docs: updated open api spec with new admin endpoints

* feat(admin-endpoints): implemented get session stats endpoint

* feat(admin-endpoints): implemented clear cached sessions endpoint

* feat(admin-endpoints): implemented force user logout endpoint

* feat(admin-endpoints): implemented cache clear endpoint
